# OPLplayer

./: README.md
OPLplayer-Android/: build.gradle  gradlew.bat  settings.gradle
OPLplayer-Android/app/: build.gradle  proguard-rules.pro
OPLplayer-Android/app/src/main/: AndroidManifest.xml
OPLplayer-Android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  opl_engine.cpp  opl_engine.h
OPLplayer-Android/app/src/main/kotlin/com/oplplayer/app/: MainActivity.kt  OplEngine.kt  UdpReceiver.kt  UsbSerialManager.kt
OPLplayer-Android/app/src/main/res/drawable/: led_active.xml  led_inactive.xml
OPLplayer-Android/app/src/main/res/layout/: activity_main.xml
OPLplayer-Android/app/src/main/res/values/: strings.xml
OPLplayer-Android/app/src/main/res/xml/: device_filter.xml
OPLplayer-Windows/: OPLplayer.cpp  OPLplayer.rc  OPLplayer.sln  OPLplayer.vcxproj  Resource.h
comopl/: comopl.ino
